# igloosphinx

./: .pre-commit-config.yaml  PRD.md  README.md  pyproject.toml
src/igloosphinx/: __init__.py  cli.py  convert.py  inventory.py
tests/: inventory_test.py
