[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.11.6,<0.12"]

[dependency-groups]
dev = [
  "pdbpp>=0.12.1"
]
test = [
  "pytest>=8.3.4"
]

[project]
name = "igloosphinx"
version = "0.1.3"
description = "Accessing Intersphinx inventories for Python packages using PyPI metadata to locate documentation sites"
readme = "README.md"
authors = [
  {name = "Louis Maddox", email = "louismmx@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
  "click>=8.3",
  "polars>=1.30.0",
  "pypi-docs-url>=0.1.5",
  "requests>=2.33",
  "sphobjinv>=2.4"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13"
]

[project.optional-dependencies]
lts-cpu = ["polars[rtcompat]>=1.30"]

[project.scripts]
igloosphinx = "igloosphinx.cli:main"

[project.urls]
Homepage = "https://github.com/lmmx/igloosphinx"
Repository = "https://github.com/lmmx/igloosphinx.git"

[tool.uv]
default-groups = "all"
